<resources>
    <string name="app_name">Lift up My Heart</string>
    <string name="something_went_wrong">Something went wrong. Try after some time</string>
    <string name="already_have">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="first_name">FIRST NAME</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_">CANCEL</string>
    <string name="ok">Ok</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_id">EMAIL ADDRESS</string>
    <string name="forgot">Enter email id to get password</string>
    <string name="phone_no">MOBILE NUMBER</string>
    <string name="pass">PASSWORD</string>
    <string name="lift_up_heart">Lift Up My Heart</string>
    <string name="get_started">GET STARTED TODAY</string>
    <string name="get_started_">GET STARTED</string>
    <string name="month_plan">Monthly Plan</string>
    <string name="year_plan">Yearly Plan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_guide_line">SignUpGuideLineActivity</string>
    <string name="title_activity_signUP">Signup</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="add_new_group">Add A new group</string>
    <string name="vibration">Vibration</string>
    <string name="done">Done</string>
    <string name="add_new_reminder">Add A new Reminder</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="nonce">Nonce</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="purchase">Purchase</string>
    <string name="loading">Loading…</string>
    <string name="submit">Submit</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>
    <string name="server_error">Seems like you are offline. Please check your Internet connection and try again.</string>
    <string name="no_internet_connection">Seems like you are offline. Please check your Internet connection and try again.</string>
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="production">Production</string>
    <string name="authorization">Authorization</string>
    <string name="tokenization_key">Use Tokenization Key</string>
    <string name="tokenization_key_summary">Use tokenization key for authorizing requests</string>
    <string name="customer">Customer</string>
    <string name="customer_summary">The customer id to use</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="empty_merchant_account">Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s</string>
    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="environment">Environment</string>
    <string name="android_pay">Android Pay</string>
    <string name="android_pay_require_shipping_address">Require Shipping Address</string>
    <string name="android_pay_require_shipping_address_summary">Require shipping address from the user</string>
    <string name="android_pay_require_phone_number">Require Phone Number</string>
    <string name="android_pay_require_phone_number_summary">Require phone number from the user</string>
    <string name="android_pay_currency_title">Currency</string>
    <string name="android_pay_currency_summary">Must be ISO-4217 format. \n\nCurrency: %s</string>
    <string name="android_pay_allowed_countries_for_shipping_title">Allowed countries for shipping</string>
    <string name="android_pay_allowed_countries_for_shipping_summary">Must be ISO-3166-2, separate by comma for multiple countries. \n\nCountries: %s</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_future_payment">Future Payment</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="paypal_payment_type">Payment Type</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_inside_circle_button_text_normal">Text Inside </string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside</string>
    <string name="you_prayer">You Prayer</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_caps">REMINDER</string>
    <string name="set_order">Set Order</string>
    <string name="answer">Answer</string>
    <string name="answered">Answered</string>
    <string name="pray_again">Pray Again</string>
    <string name="answered_prayer">Answered prayers</string>
    <string name="view_desc">View Description</string>
    <string name="hide_desc">Hide Description</string>
    <string name="delete">Delete</string>
    <string name="setting">Setting</string>
    <string name="group">Group</string>
    <string name="add_group">Add Group</string>
    <string name="all_reminder">ALL Reminder</string>
    <string name="create_group">Create Group</string>
    <string name="group_detail">Group Detail</string>
    <string name="all_group">Groups</string>
    <string name="empty"></string>
    <string name="ringing_time">Ringing Time</string>
    <string name="exit_title">Exit?</string>
    <string name="exit_confirmation_msg">Are you sure to exit from the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="invite">Invite</string>
    <string name="pray_now">PRAY NOW</string>
    <string name="show_desc">Show Description</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="short_order">SHORT ORDER</string>
    <string name="back">Back</string>
    <string name="your_prayer">YOUR PRAYERS</string>
    <string name="your_order">Set Order</string>
    <string name="reminder_">REMINDER</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="observe_day_saving">Observe Daylight Savings</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="account_password">Change Password</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="Bringing_you_closer">Bringing You Closer To\nChrist One Prayer At A Time</string>
    <string name="Bringing_you_closer_">Bringing You Closer To Christ\nOne Prayer At A Time</string>
    <string name="signup_to_get">Signup to get Started or Login to Your Account</string>
    <string name="legal">Legal</string>
    <string name="signup">SIGN UP</string>
    <string name="logout">LOG OUT</string>
    <string name="always">Always</string>
    <string name="licences">Licences</string>
    <string name="pp">Privacy Policy</string>
    <string name="term_service">Terms of Service</string>
    <string name="never">Never</string>
    <string name="ask">Ask</string>
    <string name="alpha">Alphabetical</string>
    <string name="newest">Newest First</string>
    <string name="oldest_first">Oldest First</string>
    <string name="manual">Manual</string>
    <string name="push_noti">Push Notification</string>
    <string name="noti"> Notification</string>
    <string name="email">Email</string>
    <string name="both">Both</string>
    <string name="rece_emails">Receive Emails</string>
    <string name="share">SHARE LIFT UP MY HEART</string>
    <string name="group_name">Enter group name</string>
    <string name="search">Search</string>
    <string name="prayer_timer">Prayer Timer</string>
    <string name="prayer">Prayers</string>
    <string name="timer_finish_noti">Timer Finished Notification</string>
    <string name="advance">Advance Automatically</string>
    <string name="long_per_prayer">How Long Per Prayer?</string>
    <string name="next_prayer_noti">Next Prayer Notifaction</string>
    <string name="appleal_god">What  would you like to appeal to God</string>
    <string name="des_prayer">Add a description to  this prayer</string>
    <string name="Desc">Description</string>
    <string name="choose_pray">CHOOSE WHAT TO PRAY FOR</string>
    <string name="next_reminder_time">NEXT REMINDER TIME</string>
    <string name="repeating">REPEATING</string>
    <string name="change_name">Change Name</string>
    <string name="none">None</string>
    <string name="open">Open</string>
    <string name="second_5">5 Second</string>
    <string name="second_10">10 Second</string>
    <string name="second_20">10 Second</string>
    <string name="second_30">30 Second</string>
    <string name="second_40">40 Second</string>
    <string name="second_50">50 Second</string>
    <string name="second_60">60 Second</string>
    <string name="min_2">2 Minuts</string>
    <string name="min_5">5 Minuts</string>
    <string name="min_10">10 Minuts</string>
    <string name="min_20">20 Minuts</string>
    <string name="min_30">30 Minuts</string>
    <string name="min_40">40 Minuts</string>
    <string name="min_50">50 Minuts</string>
    <string name="hours_1">1 Hour</string>
    <string name="contour">Contour</string>
    <string name="sweet">Sweet</string>
    <string name="basic">Basic</string>
    <string name="free">Free</string>
    <string name="first_free">First 10 days</string>
    <string name="lift_up_heart_one_plan">Lift Up My Heart One Plan</string>
    <string name="free_10_days_free">Free 10 days free</string>
    <string name="first_month">$2.95 Per Month</string>
    <string name="per_year">$30 Per Year</string>
    <string name="per_year_paris">$350 Per Year</string>
    <string name="per_month">$35 Per Month</string>
    <string name="free_add_on_family_members">Free Add on Family members</string>
    <string name="two_month_free">Two Month Free on Full Year\'s upfront Payment</string>
    <string name="donation">$0.55 Per User Each month gives as a Charitable donation</string>
    <string name="unlimited">Unlimited number of Ministries or Groups</string>
    <string name="parish_plan">Parish Plan</string>
</resources>